# open62541-influxdb

./: .gitmodules  CMakeLists.txt  README.md  docker-compose.yml  server.cfg
src/: ServerWatcher.cpp  ServerWatcher.h  logging.h  logging_opcua.h  main.cpp
